--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</p>
 				</div>
 			</div>
-			<!-- <div id="featured">
+			<div id="featured">
 				<div class="fheading">
 					<h1>featured</h1>
 					<h1>projects</h1>
@@ -76,7 +76,7 @@
 						</div>
 					</div>
 					<div id="fright">
-						<div class="images">
+						<!-- <div class="images">
 							<img
 								src="https://images.unsplash.com/photo-1692343814412-cbe23ff32765?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=767&q=80"
 								alt=""
@@ -93,13 +93,13 @@
 								src="https://images.unsplash.com/photo-1598133894008-61f7fdb8cc3a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=688&q=80"
 								alt=""
 							/>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="btndiv">
 					<button class="magnet">view all products</button>
 				</div>
-			</div> -->
+			</div>
 			<div id="dev">
 				<h1>Development and design resources</h1>
 				<p>
@@ -147,8 +147,8 @@
 		<!-- SCRIPTS -->
 
 		<!-- External libraries -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<!--     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"
         integrity="sha512-auFmPm+de880vk/c+bgBmuOnQ7BM28z7zPWmepVgX8737t75OHZjElOnQqERwP8cE4DIyCJ+gb1kE0b/eLWcnA=="
@@ -156,6 +156,6 @@
     <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
     <script src="https://www.unpkg.com/shery-js@1.0.0-alpha.0.5/dist/Shery.js"></script> -->
 		<!-- My Script -->
-		<script src="main.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 </html>
